Fixed bug #52656 (DOMCdataSection does not work with splitText).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@305837 c90b9560-bf6c-de11-be94-00142212c4b1